@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.9 2002/01/31 20:04:53 reinoud Exp $
+$NetBSD: distinfo,v 1.10 2003/02/17 14:55:30 agc Exp $
 
-SHA1 (sqlite-2.2.5.tar.gz) = 2d66d883e2a468e8ccce563c4b219d592a7902ae
-Size (sqlite-2.2.5.tar.gz) = 616831 bytes
+SHA1 (sqlite-2.8.0.tar.gz) = 66527dc11f20df9fd5a95aa8ac3c95ee0907b88f
+Size (sqlite-2.8.0.tar.gz) = 824187 bytes
 SHA1 (patch-aa) = 05d0408a9c3f6a371b4b9cf5464aa5a7b436023b
